<resources>
    <string name="app_name">OctoLab</string>
    <string name="introduction">To be able to use the app to its full potential, please log in to GitLab using the button below.\n\nAlternatively, you can explore some parts of GitLab using the swipe-out menu on the left.</string>
    <string name="repo_not_found_toast">Repository was not found</string>
    <string name="loading_msg">Loading\u2026</string>
    <string name="saving_msg">Saving\u2026</string>
    <string name="deleting_msg">Deleting\u2026</string>
    <string name="closing_msg">Closing\u2026</string>
    <string name="opening_msg">Opening\u2026</string>
    <string name="merging_msg">Merging\u2026</string>
    <string name="reviewing_msg">Adding Review\u2026</string>
    <string name="authenticating">Authenticating\u2026</string>
    <string name="search">Search</string>
    <string name="search_code">Search code</string>
    <string name="logout">Logout</string>
    <string name="choose_account_for_link">Multiple accounts on this instance — choose one to open this link with</string>
    <string name="login">Login</string>
    <string name="login_oauth">Login via OAuth (coming soon)</string>
    <string name="login_token">Login using access token</string>
    <string name="login_summary_oauth">Opens your GitLab instance in the browser to authorize OctoLab via OAuth.</string>
    <string name="login_summary_token">Enter a Personal Access Token with api + read_user scopes.</string>
    <string name="login_create_token">Create a token on %1$s</string>
    <string name="instance_url_hint">Instance URL (default: https://gitlab.com)</string>
    <string name="credentials_error_empty">This field must not be empty.</string>
    <string name="credentials_error_invalid_token">The entered text does not look like a valid access token.</string>
    <string name="login_error_token_rejected">%1$s rejected this token. Check that it is copied correctly and is not expired or revoked.</string>
    <string name="login_error_token_scope">This token is missing the required scopes. Create one with the api and read_user scopes.</string>
    <string name="login_error_http">Login failed: %1$s returned HTTP %2$d.</string>
    <string name="login_error_unreachable">Could not reach %1$s. Check the instance URL and your connection.</string>
    <string name="login_error_generic">Login failed: %1$s</string>
    <string name="credentials_token">Access token</string>
    <string name="try_again">Try again</string>
    <string name="report_issue">Report issue</string>
    <string name="error_copied_to_clipboard">Error details copied to clipboard — paste into your issue tracker</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="retry">Retry</string>
    <string name="open_source_components">Open source components</string>
    <string name="my_profile">My profile</string>
    <string name="user_context">Account</string>
    <string name="add_account">Add account</string>
    <string name="my_email">octolab@secninjaz.com</string>
    <string name="my_web">https://github.com/secninjaz/OctoLab</string>
    <string name="my_username">secninjaz</string>
    <string name="my_repo">OctoLab</string>
    <string name="source_code">Source Code</string>
    <string name="feedback_text">If you have any issues or suggestions, please contact me.  Any kind of feedback is greatly appreciated.</string>
    <string name="feedback_by_email">By Email</string>
    <string name="feedback_by_gl4a">By OctoLab</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_and_stars">Bookmarks and Stars</string>
    <string name="other_info">Other Information</string>
    <string name="view">View</string>
    <string name="readme">Readme</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="reply_selected">Reply (Selected)</string>
    <string name="resolve_thread">Resolve thread</string>
    <string name="unresolve_thread">Unresolve thread</string>
    <string name="resolving_thread_msg">Updating thread…</string>
    <string name="error_resolve_thread">Updating the thread failed</string>
    <string name="replying_to_thread_by">Replying to thread by %1$s</string>
    <string name="reply_to_thread_hint">Reply to thread</string>
    <string name="add_comment">Add comment</string>
    <string name="add_reaction">Add reaction</string>
    <string name="remove_reaction">Remove reaction</string>
    <string name="add_reaction_error">Adding reaction failed</string>
    <string name="remove_reaction_error">Removing reaction failed</string>
    <string name="edit">Edit</string>
    <string name="members">Members</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="merged">Merged</string>
    <string name="draft">Draft</string>
    <string name="theme">Theme</string>
    <string name="pub_timeline">Public Events</string>
    <string name="load_failure_explanation">Loading the data from GitLab failed. Please verify you have a working network connection and try again.</string>
    <string name="load_failure_explanation_dmca">This repository was taken down for legal reasons.\nPlease see %1$s for details.</string>
    <string name="load_failure_explanation_parsing">There was an error while parsing GitLab\'s response. You can use the button below to report this issue to the app developers.</string>
    <string name="load_failure_explanation_with_reason">Loading the data from GitLab failed. GitLab told us the following reason:\n%1$s</string>
    <string name="snackbar_network_error">%1$s. Please check your internet connection.</string>
    <string name="snackbar_application_error">%1$s. You can copy the error log to provide more details when reporting the issue to the app developers.</string>
    <string name="snackbar_gitlab_api_error">%1$s: %2$s</string>
    <string name="snackbar_copy_error_msg_action">Copy error message</string>
    <string name="snackbar_copy_error_log_action">Copy error log</string>
    <string name="issue_reported">The issue has been reported. Thank you!</string>
    <string name="find_next">Find next</string>
    <string name="find_previous">Find previous</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="downloads">Downloads</string>
    <string name="releases">Releases</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="no_browser_found">The link could not be opened: no browser was found on your device</string>
    <string name="link_copied">Link copied</string>
    <string name="wrap_lines">Wrap lines</string>
    <string name="follow_renames">Follow renames</string>
    <string name="unknown">unknown</string>
    <string name="history">History</string>
    <string name="download">Download</string>
    <string name="deleted">(deleted)</string>
    <string name="go_to">Go to</string>
    <string name="forked_from">Forked from %1$s</string>
    <string name="menu_user">User %1$s</string>
    <string name="menu_repo">Repo %1$s</string>
    <string name="menu_compare">Compare %1$s</string>
    <string name="menu_commit">Commit %1$s</string>
    <string name="menu_issue">Issue %1$d</string>
    <string name="menu_gist">Snippet %1$s</string>
    <string name="menu_file">File %1$s</string>
    <string name="menu_fork">Forked repo %1$s</string>
    <string name="menu_wiki">Wiki in browser</string>
    <string name="menu_pull">Merge request %1$d</string>
    <string name="menu_issues">Open issues</string>
    <string name="menu_pulls">Open merge requests</string>
    <string name="delete_comment_message">Delete this comment?</string>
    <string name="saving_comment">Saving comment\u2026</string>
    <string name="ellipse" translatable="false">\u2026</string>
    <string name="view_more">View more\u2026</string>
    <string name="view_video">View video</string>
    <string name="pulls">Merge Requests</string>
    <string name="issue_milestone_hint">Milestone</string>
    <string name="issue_assignee_hint">Assignees</string>
    <string name="mr_reviewer_hint">Reviewers</string>
    <string name="link_not_openable">Link could not be opened</string>
    <string name="download_created">Created %1$s</string>
    <string name="download_mobile_warning_title">Mobile connection download</string>
    <string name="download_mobile_warning_message">Do you want to download this file using your mobile connection?\nYou can also schedule it for download when you\'re using your Wi-Fi connection next time.</string>
    <string name="download_now_button">Download now</string>
    <string name="download_wifi_button">Download over Wi-Fi</string>
    <string name="download_permission_rationale">Permission to write to USB storage or SD card is required in order to download files.</string>
    <string name="load_auth_failure_notice">Your authentication credentials aren\'t valid anymore, please log in again.</string>
    <string name="unset">Unset</string>
    <string name="copyright_notice">\u00a9 2026 SECNINJAZ TECHNOLOGIES</string>
    <string name="actions">Actions</string>
    <string name="created">Created</string>
    <string name="assigned">Assigned</string>
    <string name="all">All</string>
    <string name="mentioned">Mentioned</string>
    <string name="participating">Participating</string>
    <string name="reviews">Reviews</string>
    <string name="my_repositories">Projects</string>
    <string name="my_issues">Work items</string>
    <string name="start_page">Start page</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="issue_filter">Filter</string>
    <string name="menu_text_size">Code view text size</string>
    <string name="menu_gif_load_mode">Animated GIF loading</string>
    <string name="notifications_setting_title">Notifications</string>
    <string name="notifications_setting_summary">Alert when new to-do items need your attention</string>
    <string name="notification_interval">Sync interval</string>
    <string name="worker_status_category">Notification worker</string>
    <string name="worker_status_title">Worker state</string>
    <string name="worker_state_unknown">Unknown</string>
    <string name="worker_last_sync_title">Last synced</string>
    <string name="worker_last_sync_never">Never</string>
    <string name="worker_sync_now_title">Sync now</string>
    <string name="worker_sync_now_summary">Trigger an immediate background poll</string>
    <string name="use_custom_tabs">Use built-in browser</string>
    <string name="open_links_inside_app">Open links inside the app</string>
    <string name="open_links_external_browser">Open links in an external browser</string>
    <string name="todo_filter_pending">Unread</string>
    <string name="todo_action_all">All</string>
    <string name="todo_action_assigned">Assigned to you</string>
    <string name="todo_action_mentioned">Mentioned</string>
    <string name="todo_action_review_requested">Review requested</string>
    <string name="todo_action_unmergeable">Unmergeable changes</string>
    <string name="todo_action_build_failed">Build failed</string>
    <string name="debug_category">Debug</string>
    <string name="debug_logging_title">Enable debug logging</string>
    <string name="debug_logging_summary">Records API calls and errors in memory for bug reports</string>
    <string name="debug_share_logs">Share logs</string>
    <string name="debug_share_logs_summary">Send the current log buffer to a bug report</string>
    <string name="debug_clear_logs">Clear logs</string>
    <string name="group_projects">Projects</string>
    <string name="group_members">Members</string>
    <string name="group_subgroups">Subgroups and projects</string>
</resources>