<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.gl4a.widget.IntegerListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="@integer/default_theme"
        android:entries="@array/theme_items"
        android:entryValues="@array/theme_values"
        android:key="theme"
        android:summary="%s"
        android:title="@string/theme" />

    <ListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="notifications"
        android:entries="@array/start_page_items"
        android:entryValues="@array/start_page_values"
        android:key="start_page"
        android:summary="%s"
        android:title="@string/start_page" />

    <com.gl4a.widget.IntegerListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="2"
        android:entries="@array/text_size_items"
        android:entryValues="@array/text_size_values"
        android:key="webview_initial_zoom"
        android:summary="%s"
        android:title="@string/menu_text_size" />

    <com.gl4a.widget.IntegerListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="1"
        android:entries="@array/load_gif_mode_items"
        android:entryValues="@array/load_gif_mode_values"
        android:key="http_gif_load_mode"
        android:summary="%s"
        android:title="@string/menu_gif_load_mode" />

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="use_custom_tabs"
        android:summaryOn="@string/open_links_inside_app"
        android:summaryOff="@string/open_links_external_browser"
        android:title="@string/use_custom_tabs" />

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="notifications"
        android:title="@string/notifications_setting_title"
        android:summary="@string/notifications_setting_summary" />

    <com.gl4a.widget.IntegerListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="15"
        android:dependency="notifications"
        android:entries="@array/notification_interval_items"
        android:entryValues="@array/notification_interval_values"
        android:key="notification_interval"
        android:summary="%s"
        android:title="@string/notification_interval" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:dependency="notifications"
        android:title="@string/worker_status_category">

        <Preference
            app:iconSpaceReserved="false"
            android:key="worker_status_info"
            android:selectable="false"
            android:title="@string/worker_status_title"
            android:summary="@string/worker_state_unknown" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="worker_last_sync"
            android:selectable="false"
            android:title="@string/worker_last_sync_title"
            android:summary="@string/worker_last_sync_never" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="worker_sync_now"
            android:title="@string/worker_sync_now_title"
            android:summary="@string/worker_sync_now_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/debug_category">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="debug_logging_enabled"
            android:title="@string/debug_logging_title"
            android:summary="@string/debug_logging_summary" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="debug_share_logs"
            android:title="@string/debug_share_logs"
            android:summary="@string/debug_share_logs_summary"
            android:dependency="debug_logging_enabled" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="debug_clear_logs"
            android:title="@string/debug_clear_logs"
            android:dependency="debug_logging_enabled" />

    </PreferenceCategory>

    <Preference
        app:iconSpaceReserved="false"
        android:key="about"
        android:title="@string/about" />

    <Preference
        app:iconSpaceReserved="false"
        android:key="open_source_components"
        android:title="@string/open_source_components" />

</PreferenceScreen>
