<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/content_padding"
        android:paddingRight="@dimen/content_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/octolab_bg"
            android:tint="?attr/colorOnSurface" />

        <LinearLayout
            android:id="@+id/welcome_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.gl4a.widget.LinkHandlingTextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/introduction"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorOnSurface" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/login"
                android:textColor="@color/accent"
                app:backgroundTint="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_progress_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <com.gl4a.widget.LinkHandlingTextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/authenticating"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="?attr/colorOnSurface" />

            <ProgressBar
                android:id="@+id/login_progress"
                style="?attr/indeterminateProgressStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:indeterminate="true"
                android:indeterminateTint="?attr/colorOnSurface"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
