<?xml version="1.0" encoding="utf-8"?>
<!-- Group overview (#103): header, description, projects/members rows, and a tree of
     subgroups and projects that expands in place (#172). -->
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/content_padding">

            <com.gl4a.widget.FixedSizeImageView
                android:id="@+id/iv_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/avatar_frame"
                tools:src="@drawable/default_avatar" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.ItemTitle"
                    tools:text="F-Droid" />

                <TextView
                    android:id="@+id/tv_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="fdroid" />

            </LinearLayout>

        </LinearLayout>

        <com.gl4a.widget.LinkHandlingTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/content_padding"
            android:paddingRight="@dimen/content_padding"
            android:paddingBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_projects"
            style="@style/SelectableItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding"
            android:text="@string/group_projects"
            android:textAppearance="@style/TextAppearance.ItemTitle" />

        <TextView
            android:id="@+id/tv_members"
            style="@style/SelectableItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding"
            android:text="@string/group_members"
            android:textAppearance="@style/TextAppearance.ItemTitle" />

        <TextView
            android:id="@+id/tv_subgroups_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/content_padding"
            android:paddingRight="@dimen/content_padding"
            android:paddingTop="@dimen/content_padding"
            android:paddingBottom="4dp"
            android:text="@string/group_subgroups"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_subgroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
